--- a/express/package.json
+++ b/express/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "opal-webprodogies-express",
+  "name": "express",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
